--- a/ObjTracker.ControlPanel/ObjTracker.ControlPanel.csproj
+++ b/ObjTracker.ControlPanel/ObjTracker.ControlPanel.csproj
@@ -37,7 +37,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>ObjTrackControlPanel.Program</StartupObject>
+    <StartupObject>ObjTracker.ControlPanel.Program</StartupObject>
   </PropertyGroup>
   <PropertyGroup>
     <ApplicationManifest>app.manifest</ApplicationManifest>
